Fix: text overflow

--- a/src/app/features/cocktails/components/currrent-drink/currrent-drink.component.scss
+++ b/src/app/features/cocktails/components/currrent-drink/currrent-drink.component.scss
@@ -44,7 +44,9 @@ span {
 
         &--primary {
             animation: ShadowAnimation 1s infinite;
+            text-overflow: ellipsis;
             color: $lightGray;
+            overflow: auto;
         }
 
     }
