--- a/src/app/shared/sass/_icons.scss
+++ b/src/app/shared/sass/_icons.scss
@@ -59,12 +59,18 @@
         color: $blue;
     }
     &-blue {
-        color: $pink;
+        color: $blue;
     }
 
     &-yellow{
         color: $yellow;
     }
+
+    &-pink{
+        color: $pink;
+    }
+
+
 
 
 
